--- a/index1.html
+++ b/index1.html
@@ -41,12 +41,12 @@
           <div class="main"> 
             <h2>OUR COLLEGE LIFE</h2>
             <h5>Gonna describe our college life in few words</h5>
-            <img src="first.png"  height="400px">
+            <img src="first.PNG"  height="400px">
             <p>This Pic was taken when we were about to go our homes after our first exams.I(Harshit),Himesh,Attinderjeet,Keysang,Sidharth These five just used to be the best group in our hostel and college.</p>
             <br>
             <h2>THE ACCIDENTAL SHIMLA</h2>
             <h5>How can we forget our first trip to shimla on 5-02-2019. Seriously it was first but the best</h5>
-            <img src="second.png"  height="400px">
+            <img src="second.PNG"  height="400px">
             <p>i remember, one evening i,himesh and sttinder were just sitting in 4/16  and haveing normal conversation. One of us said "Hey Lets go to shimla" and we all agreed to go . And we were three now who planned to go shimla but how can we forget our Photographer friend - Keysang Yonthan , we thought he would not be going but fortunately he also agreed. "ab acchhi photos aaengi lol" At last Anchit also agreed and we made a successfull trip. </p>
           </div>
       </div>
